[package]
name = "media-codec-opus"
description = "Rust bindings to opus"
homepage = "https://github.com/rust-media"
repository = "https://github.com/rust-media/media-codec-opus"
documentation = "https://docs.rs/media-codec-opus"
version = "0.4.0"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia::audio", "multimedia::encoding"]
keywords = ["opus"]
edition = "2021"

[dependencies]
bytemuck = "1.24"
ctor = "0.6"
media-codec = { version = "0.7.0", default-features = false, features = ["audio"] }
media-codec-opus-sys = { version = "0.2", path = "sys" }
media-core = { version = "0.7.0", default-features = false, features = ["audio"] }

[features]
default = ["decoder", "encoder"]
decoder = []
encoder = []
docsrs = ["media-codec-opus-sys/docsrs"]

[package.metadata.docs.rs]
features = ["docsrs"]
