[package]
name = "media-codec-opus-sys"
description = "Rust bindings to opus"
homepage = "https://github.com/rust-media"
repository = "https://github.com/rust-media/media-codec-opus"
version = "0.2.0"
authors = ["Zhou Wei <zhouwei@ehom.net>"]
license = "MIT OR Apache-2.0"
categories = ["multimedia::audio", "multimedia::encoding"]
keywords = ["opus"]
edition = "2021"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"

[features]
docsrs = []

[package.metadata.docs.rs]
features = ["docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
